--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "coba.js",
   "dependencies": {
     "amqplib": "^0.5.2",
+    "async-foreach": "^0.1.3",
     "bluebird": "^3.5.1",
     "express": "^4.16.2",
     "is-port-available": "^0.1.5",
@@ -33,5 +34,6 @@
   "bugs": {
     "url": "https://github.com/hlmn/TA/issues"
   },
-  "homepage": "https://github.com/hlmn/TA#readme"
+  "homepage": "https://github.com/hlmn/TA#readme",
+  "keywords": []
 }
