--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "coba.js",
   "dependencies": {
     "amqplib": "^0.5.2",
+    "async-exit-hook": "^2.0.1",
     "async-foreach": "^0.1.3",
     "bluebird": "^3.5.1",
     "express": "^4.16.2",
